Highlight selected vehicle

--- a/public/controller.html
+++ b/public/controller.html
@@ -49,46 +49,46 @@
                     <ul class="list-inline">
                         <li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
                             <img src="images/car.png" class="car-specs__item__image" />
-                            <span class="car-specs__item__name epsilon js--select-vehicle--name">Red Tiger</span>
+                            <span class="car-specs__item__name epsilon js--select-vehicle--name"></span>
                             <ul class="list-block car-specs">
                                 <li class="car-specs__item">
-                                    Armor <span class="car-specs__item__value js--select-vehicle--armor">120</span>
+                                    Armor <span class="car-specs__item__value js--select-vehicle--armor"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed">120</span>
+                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Power <span class="car-specs__item__value js--select-vehicle--power">120</span>
+                                    Power <span class="car-specs__item__value js--select-vehicle--power"></span>
                                 </li><!-- .car-specs__item -->
                             </ul><!-- .car__specs -->
                         </li><!-- .car --><!--
                      --><li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
                             <img src="images/car.png" class="car-specs__item__image" />
-                            <span class="car-specs__item__name epsilon js--select-vehicle--name">Red Tiger</span>
+                            <span class="car-specs__item__name epsilon js--select-vehicle--name"></span>
                             <ul class="list-block car-specs">
                                 <li class="car-specs__item">
-                                    Armor <span class="car-specs__item__value js--select-vehicle--armor">120</span>
+                                    Armor <span class="car-specs__item__value js--select-vehicle--armor"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed">120</span>
+                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Power <span class="car-specs__item__value js--select-vehicle--power">120</span>
+                                    Power <span class="car-specs__item__value js--select-vehicle--power"></span>
                                 </li><!-- .car-specs__item -->
                             </ul><!-- .car__specs -->
                         </li><!-- .car --><!--
                      --><li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
                             <img src="images/car.png" class="car-specs__item__image" />
-                            <span class="car-specs__item__name epsilon js--select-vehicle--name">Red Tiger</span>
+                            <span class="car-specs__item__name epsilon js--select-vehicle--name"></span>
                             <ul class="list-block car-specs">
                                 <li class="car-specs__item">
-                                    Armor <span class="car-specs__item__value js--select-vehicle--armor">120</span>
+                                    Armor <span class="car-specs__item__value js--select-vehicle--armor"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed">120</span>
+                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Power <span class="car-specs__item__value js--select-vehicle--power">120</span>
+                                    Power <span class="car-specs__item__value js--select-vehicle--power"></span>
                                 </li><!-- .car-specs__item -->
                             </ul><!-- .car__specs -->
                         </li><!-- .car -->
