Switch to choose map state, smartphone switch to wait for map state

--- a/public/controller.html
+++ b/public/controller.html
@@ -102,6 +102,18 @@
     </section><!-- select-vehicle -->
 
 
+    <section class="state js--state" data-game="waiting-for-map">
+        <h1 class="logo">Kudu</h1>
+        <div class="container container--centered">
+            <div class="container__inner">
+                <div class="container text--centered">
+                    <h1>Waiting for map to be selected</h1>
+                </div><!-- .container -->
+            </div><!-- .container__inner -->
+        </div><!-- .container -->
+    </section><!-- waiting-for-players -->
+
+
     <div class="yell js--yell">
         <div class="yell__container js--yell__container">
             yell
