--- a/public/controller.html
+++ b/public/controller.html
@@ -114,6 +114,9 @@
     </section><!-- waiting-for-players -->
 
 
+    <section class="state js--state js--controller" data-game="controller"></section><!-- controller -->
+
+
     <div class="yell js--yell">
         <div class="yell__container js--yell__container">
             yell
@@ -126,6 +129,7 @@
     <script src="js/yell.js"></script>
     <script src="js/fullscreen.js"></script>
     <script src="js/smartphone.js"></script>
+    <script src="js/controller.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
