Switch to game canvas on vehicles selected

--- a/public/controller.html
+++ b/public/controller.html
@@ -102,12 +102,12 @@
     </section><!-- select-vehicle -->
 
 
-    <section class="state js--state" data-game="waiting-for-map">
+    <section class="state js--state" data-game="waiting-for-vehicles">
         <h1 class="logo">Kudu</h1>
         <div class="container container--centered">
             <div class="container__inner">
                 <div class="container text--centered">
-                    <h1>Waiting for map to be selected</h1>
+                    <h1>Waiting for other players</h1>
                 </div><!-- .container -->
             </div><!-- .container__inner -->
         </div><!-- .container -->
