--- a/public/game.html
+++ b/public/game.html
@@ -88,7 +88,7 @@
     </section><!-- .choose-map -->
 
 
-    <section class="state js--state" data-game="game">
+    <section class="state js--state js--game-canvas" data-game="game">
         <!-- TODO: canvas -->
     </section><!-- game -->
 
