Speeds to speed (typo)

--- a/public/controller.html
+++ b/public/controller.html
@@ -55,7 +55,7 @@
                                     Armor <span class="car-specs__item__value js--select-vehicle--armor"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed"></span>
+                                    Speed <span class="car-specs__item__value js--select-vehicle--speed"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
                                     Power <span class="car-specs__item__value js--select-vehicle--power"></span>
@@ -70,7 +70,7 @@
                                     Armor <span class="car-specs__item__value js--select-vehicle--armor"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed"></span>
+                                    Speed <span class="car-specs__item__value js--select-vehicle--speed"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
                                     Power <span class="car-specs__item__value js--select-vehicle--power"></span>
@@ -85,7 +85,7 @@
                                     Armor <span class="car-specs__item__value js--select-vehicle--armor"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
-                                    Speeds <span class="car-specs__item__value js--select-vehicle--speed"></span>
+                                    Speed <span class="car-specs__item__value js--select-vehicle--speed"></span>
                                 </li><!-- .car-specs__item -->
                                 <li class="car-specs__item">
                                     Power <span class="car-specs__item__value js--select-vehicle--power"></span>
