--- a/public/game.html
+++ b/public/game.html
@@ -143,6 +143,7 @@
     <script src="js/min/shared.js"></script>
     <script src="js/min/gamestate.js"></script>
     <script src="js/yell.js"></script>
+    <script src="js/bullet.js"></script>
     <script src="js/gameEngine.js"></script>
     <script src="js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
