Car images, background texture, on 0 lives hide player, display score

--- a/public/controller.html
+++ b/public/controller.html
@@ -48,7 +48,7 @@
                 <div class="container text--centered">
                     <ul class="list-inline">
                         <li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
-                            <img src="images/car.png" class="car-specs__item__image" />
+                            <img src="images/car.png" class="car-specs__item__image js--car__image" />
                             <span class="car-specs__item__name epsilon js--select-vehicle--name"></span>
                             <ul class="list-block car-specs">
                                 <li class="car-specs__item">
@@ -63,7 +63,7 @@
                             </ul><!-- .car__specs -->
                         </li><!-- .car --><!--
                      --><li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
-                            <img src="images/car.png" class="car-specs__item__image" />
+                            <img src="images/car.png" class="car-specs__item__image js--car__image" />
                             <span class="car-specs__item__name epsilon js--select-vehicle--name"></span>
                             <ul class="list-block car-specs">
                                 <li class="car-specs__item">
@@ -78,7 +78,7 @@
                             </ul><!-- .car__specs -->
                         </li><!-- .car --><!--
                      --><li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
-                            <img src="images/car.png" class="car-specs__item__image" />
+                            <img src="images/car.png" class="car-specs__item__image js--car__image" />
                             <span class="car-specs__item__name epsilon js--select-vehicle--name"></span>
                             <ul class="list-block car-specs">
                                 <li class="car-specs__item">
