Finish round, display score.

--- a/public/controller.html
+++ b/public/controller.html
@@ -116,6 +116,17 @@
 
     <section class="state js--state js--controller" data-game="controller"></section><!-- controller -->
 
+    <section class="state js--state" data-game="display-score">
+        <h1 class="logo">Kudu</h1>
+        <div class="container container--centered">
+            <div class="container__inner">
+                <div class="container text--centered">
+                    <h1>Round finished</h1>
+                </div><!-- .container -->
+            </div><!-- .container__inner -->
+        </div><!-- .container -->
+    </section><!-- waiting-for-players -->
+
 
     <div class="yell js--yell">
         <div class="yell__container js--yell__container">
