--- a/public/game.html
+++ b/public/game.html
@@ -100,8 +100,11 @@
                 <div class="container text--centered">
                     <div class="grid">
                         <div class="grid__item desk--one-half lap--two-thirds">
-                            <h1>Scoreboard</h1>
-                            <p>TODO</p>
+                            <h1>Total Score</h1>
+                            <ol class="list-block js--scoreboard">
+                                <li>Someone - 10231</li>
+                                <li>Billy - 123123</li>
+                            </ol>
                         </div><!-- .grid__item -->
                     </div><!-- .grid -->
                 </div><!-- .container -->
