--- a/public/game.html
+++ b/public/game.html
@@ -111,7 +111,7 @@
             </div><!-- .container__inner -->
         </div><!-- .container -->
         <div class="button-container">
-            <button type="button" class="btn btn--bright js--scoreboard--ready">Ready</button>
+            <button type="button" class="btn btn--bright js--scoreboard--ready">Next Round</button>
         </div><!-- .button-container -->
     </section><!-- .scoreboard -->
 
