DC, improved collision detection

--- a/public/game.html
+++ b/public/game.html
@@ -101,10 +101,7 @@
                     <div class="grid">
                         <div class="grid__item desk--one-half lap--two-thirds">
                             <h1>Total Score</h1>
-                            <ol class="list-block js--scoreboard">
-                                <li>Someone - 10231</li>
-                                <li>Billy - 123123</li>
-                            </ol>
+                            <ol class="list-block js--scoreboard"></ol>
                         </div><!-- .grid__item -->
                     </div><!-- .grid -->
                 </div><!-- .container -->
