--- a/public/controller.html
+++ b/public/controller.html
@@ -41,6 +41,21 @@
         </div><!-- .container -->
     </section><!-- waiting-for-players -->
 
+    <section class="state js--state" data-game="enter-name">
+        <h1 class="logo">Kudu</h1>
+        <div class="container container--centered">
+            <div class="container__inner">
+                <div class="container text--centered">
+                    <p>Please enter your nickname</p>
+                    <input type="name" class="js--enter-name--name input input--small" />
+                </div><!-- .container -->
+            </div><!-- .container__inner -->
+        </div><!-- .container -->
+        <div class="button-container">
+            <button type="button" class="btn btn--small btn--bright js--enter-name--submit">Enter</button>
+        </div><!-- .button-container -->
+    </section><!-- enter-code -->
+
 
     <section class="state js--state" data-game="select-vehicle">
         <div class="container container--centered">
